--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -5,22 +5,101 @@
   address   = {北京},
   publisher={清华大学出版社},
 }
-@article{菲利普2016营销管理,
-  title={《 营销管理》},
-  author={菲利普 and 科特勒 and 凯文 and 莱恩 and 凯勒 and 何佳讯 and 于洪彦 and 牛永革 and 徐岚 and 董伊人 and others},
-  journal={品牌},
-  number={5},
-  pages={2},
+
+@phdthesis{强化学习中离策略算法的分析和研究,
+  title={强化学习中离策略算法的分析和研究},
+  author={傅启明},
+  year={2014},
+  address   = {苏州},
+  school={苏州大学}
+}
+@phdthesis{陈桂兴2014强化学习中值函数逼近方法的研究,
+  title={强化学习中值函数逼近方法的研究},
+  author={陈桂兴},
+  year={2014},
+  address   = {苏州},
+  school={苏州大学}
+}
+@phdthesis{2016连续空间强化学习研究,
+  title={连续空间强化学习研究},
+  author={张春元},
+  year={2016},
+  address   = {成都},
+  school={电子科技大学}
+}
+@phdthesis{2016面向强化学习的模型学习算法研究,
+  title={面向强化学习的模型学习算法研究},
+  author={周谊成},
+  year={2016},
+  address   = {苏州},
+  school={苏州大学}
+}
+@phdthesis{强化学习中值函数逼近方法的研究,
+  title={强化学习中值函数逼近方法的研究},
+  author={ 陈桂兴},
+  year={2014},
+  address   = {苏州},
+  school={苏州大学}
+}
+
+@article{张文旭2017基于事件驱动的多智能体强化学习研究,
+  title={基于事件驱动的多智能体强化学习研究},
+  author={张文旭 and 马磊 and 王晓东},
+  year={2017},
+  address   = {哈尔滨},
+  publisher={智能系统学报}
+}
+@inproceedings{macek2002reinforcement,
+  title={A reinforcement learning approach to obstacle avoidance of mobile robots},
+  author={Macek, Kristijan and PetroviC, Ivan and Peric, N},
+  booktitle={Proceedings of 7th International Workshop on Advanced Motion Control},
+  pages={462--466},
+  year={2002}
+}
+
+@inproceedings{boutilier2016budget,
+  title={Budget Allocation using Weakly Coupled, Constrained Markov Decision Processes.},
+  author={Boutilier, Craig and Lu, Tyler},
+  booktitle={Proceedings of the 32nd Conference on Uncertainty in Artificial Intelligence},
+  pages={52--61},
   year={2016}
 }
-@article{谭思敏2008中国式营销,
-  title={中国式营销},
-  author={谭思敏},
-  journal={汽车观察},
-  number={6},
-  pages={101--102},
-  year={2008}
+
+@article{guo2015survey,
+  title={A survey on semi-Markov decision processes},
+  author={GUO, XianPing and HUANG, YongHui},
+  journal={SCIENTIA SINICA Mathematica},
+  volume={45},
+  number={5},
+  pages={477--496},
+  year={2015},
+  publisher={Science China Press}
 }
+@inproceedings{tesauro2006hybrid,
+  title={A hybrid reinforcement learning approach to autonomic resource allocation},
+  author={Tesauro, Gerald and Jong, Nicholas K and Das, Rajarshi and Bennani, Mohamed N},
+  booktitle={Proceedings of International Conference on Autonomic Computing},
+  pages={65--73},
+  year={2006}
+}
+@inproceedings{abe2002empirical,
+  title={Empirical comparison of various reinforcement learning strategies for sequential targeted marketing},
+  author={Abe, Naoki and Pednault, Edwin and Wang, Haixun and Zadrozny, Bianca and Fan, Wei and Apt{\'e}, Chidanand},
+  booktitle={Proceedings of IEEE International Conference on Data Mining},
+  pages={3--10},
+  year={2002}
+}
+@article{mitik2017data,
+  title={Data Mining Approach for Direct Marketing of Banking Products with Profit/Cost Analysis},
+  author={Mitik, Merve and Korkmaz, Ozan and Karagoz, Pinar and Toroslu, Ismail Hakki and Yucel, Ferhat},
+  journal={The Review of Socionetwork Strategies},
+  volume={11},
+  number={1},
+  pages={17--31},
+  year={2017},
+  publisher={Springer}
+}
+
 @article{bahari2015efficient,
   title={An efficient CRM-data mining framework for the prediction of customer behaviour},
   author={Bahari, T Femina and Elayidom, M Sudheep},
@@ -63,6 +142,26 @@
   pages={248--260},
   year={2015},
   publisher={Elsevier}
+}
+@inproceedings{van2016deep,
+  title={Deep Reinforcement Learning with Double Q-Learning.},
+  author={Van Hasselt, Hado and Guez, Arthur and Silver, David},
+  booktitle={Proceedings of the 30th AAAI Conference on Artificial Intelligence},
+  pages={2094--2100},
+  year={2016}
+}
+@inproceedings{mnih2016asynchronous,
+  title={Asynchronous methods for deep reinforcement learning},
+  author={Mnih, Volodymyr and Badia, Adria Puigdomenech and Mirza, Mehdi and Graves, Alex and Lillicrap, Timothy and Harley, Tim and Silver, David and Kavukcuoglu, Koray},
+  booktitle={International Conference on Machine Learning},
+  pages={1928--1937},
+  year={2016}
+}
+@article{lillicrap2015continuous,
+  title={Continuous control with deep reinforcement learning},
+  author={Lillicrap, Timothy P and Hunt, Jonathan J and Pritzel, Alexander and Heess, Nicolas and Erez, Tom and Tassa, Yuval and Silver, David and Wierstra, Daan},
+  journal={arXiv preprint arXiv:1509.02971},
+  year={2015}
 }
 @book{stone1988successful,
   title={Successful direct marketing methods},
@@ -161,7 +260,7 @@
 @inproceedings{alam2012actionable,
   title={Actionable knowledge mining from improved post processing decision trees},
   author={Alam, M and Alam, SA},
-  booktitle={International Conference on Computing and Control Engineering (ICCCE 2012), Chennai},
+  booktitle={International Conference on Computing and Control Engineering},
   pages={1--8},
   year={2012}
 }
@@ -184,12 +283,7 @@
   pages={692--696},
   year={2017}
 }
-@mastersthesis{徐笑昂2007直复营销模式下的商品选择和顾客分群算法研究,
-  title={直复营销模式下的商品选择和顾客分群算法研究},
-  author={徐笑昂},
-  year={2007},
-  school={吉林大学}
-}
+
 @article{ngai2009application,
   title={Application of data mining techniques in customer relationship management: A literature review and classification},
   author={Ngai, Eric WT and Xiu, Li and Chau, Dorothy CK},
@@ -222,10 +316,9 @@
 @inproceedings{pednault2002sequential,
   title={Sequential cost-sensitive decision making with reinforcement learning},
   author={Pednault, Edwin and Abe, Naoki and Zadrozny, Bianca},
-  booktitle={Proceedings of the eighth ACM SIGKDD international conference on Knowledge discovery and data mining},
+  booktitle={Proceedings of the 8th ACM SIGKDD international conference on Knowledge discovery and data mining},
   pages={259--268},
-  year={2002},
-  organization={ACM}
+  year={2002}
 }
 @inproceedings{silver2013concurrent,
   title={Concurrent reinforcement learning from customer interactions},
@@ -261,9 +354,9 @@
 @inproceedings{archak2010budget,
   title={Budget optimization for online advertising campaigns with carryover effects},
   author={Archak, Nikolay and Mirrokni, Vahab and Muthukrishnan, S},
-  booktitle={Sixth Ad Auctions Workshop},
+  booktitle={Proceedings of 6th Ad Auctions Workshop},
   year={2010},
-  organization={Citeseer}
+  pages={1245-1356}
 }
 @inproceedings{zhang2017multi,
   title={Multi-Channel Marketing with Budget Complementarities},
@@ -292,9 +385,12 @@
 @inproceedings{boutilier2016budget,
   title={Budget Allocation using Weakly Coupled, Constrained Markov Decision Processes.},
   author={Boutilier, Craig and Lu, Tyler},
-  booktitle={UAI},
+  booktitle={Proceedings of the 32nd Conference on Uncertainty in Artificial Intelligence},
+  pages={52--61},
   year={2016}
 }
+
+
 @inproceedings{de2017bounding,
   title={Bounding the Probability of Resource Constraint Violations in Multi-Agent MDPs.},
   author={de Nijs, Frits and Walraven, Erwin and de Weerdt, Mathijs Michiel and Spaan, Matthijs TJ},
@@ -316,7 +412,8 @@
   booktitle={Reinforcement learning},
   pages={45--73},
   year={2012},
-  publisher={Springer}
+  publisher={Springer},
+  address={Berlin, Heidelberg}
 }
 @article{baxter2001infinite,
   title={Infinite-horizon policy-gradient estimation},
@@ -330,7 +427,8 @@
   title={The reinforcement learning toolbox, reinforcement learning for optimal control tasks},
   author={Neumann, Gerhard},
   year={2005},
-  publisher={na}
+  publisher={Citeseer},
+  address={Graz}
 }
 @inproceedings{konda2000actor,
   title={Actor-critic algorithms},
@@ -339,10 +437,11 @@
   pages={1008--1014},
   year={2000}
 }
-@article{mnih2013playing,
+@inproceedings{mnih2013playing,
   title={Playing atari with deep reinforcement learning},
   author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Graves, Alex and Antonoglou, Ioannis and Wierstra, Daan and Riedmiller, Martin},
-  journal={arXiv preprint arXiv:1312.5602},
+  booktitle={Deep Learning Workshop on Advances in neural information processing systems},
+  pages={54--62},
   year={2013}
 }
 @article{hochreiter1997long,
@@ -368,9 +467,9 @@
 @book{rummery1994line,
   title={On-line Q-learning using connectionist systems},
   author={Rummery, Gavin A and Niranjan, Mahesan},
-  volume={37},
   year={1994},
-  publisher={University of Cambridge, Department of Engineering}
+  publisher={University of Cambridge, Department of Engineering},
+  address={Cambridge}
 }
 @article{samuel1959some,
   title={Some studies in machine learning using the game of checkers},
@@ -405,7 +504,7 @@
 @inproceedings{precup2001off,
   title={Off-policy temporal-difference learning with function approximation},
   author={Precup, Doina and Sutton, Richard S and Dasgupta, Sanjoy},
-  booktitle={ICML},
+  booktitle={Proceeding of the 28th International Conference on Machine Learning},
   pages={417--424},
   year={2001}
 }
@@ -419,11 +518,10 @@
 @inproceedings{bertsekas1995neuro,
   title={Neuro-dynamic programming: an overview},
   author={Bertsekas, Dimitri P and Tsitsiklis, John N},
-  booktitle={Decision and Control, 1995., Proceedings of the 34th IEEE Conference on},
+  booktitle={Proceedings of the 34th IEEE Conference on Decision and Control },
   volume={1},
   pages={560--564},
-  year={1995},
-  organization={IEEE}
+  year={1995}
 }
 @article{dwyer1997customer,
   title={Customer lifetime valuation to support marketing decision making},
@@ -530,19 +628,20 @@
   title={Reinforcement learning for robots using neural networks},
   author={Lin, Long-Ji},
   year={1993},
-  institution={Carnegie-Mellon Univ Pittsburgh PA School of Computer Science}
+  institution={School of Computer Science Carnegie Mellon University},
+  address={Pittsburgh}
 }
 @article{narasimhan2015language,
   title={Language understanding for text-based games using deep reinforcement learning},
   author={Narasimhan, Karthik and Kulkarni, Tejas and Barzilay, Regina},
-  journal={arXiv preprint arXiv:1506.08941},
-  year={2015}
+  journal={Proceedings of the 20th Conference on Empirical Methods in Natural Language Processing},
+  year={2015},
+  pages={1–11}
 }
 @inproceedings{pineau2003point,
   title={Point-based value iteration: An anytime algorithm for POMDPs},
   author={Pineau, Joelle and Gordon, Geoff and Thrun, Sebastian and others},
-  booktitle={IJCAI},
-  volume={3},
+  booktitle={Procedings of 23rd International Joint Conference on Artificial Intelligence},
   pages={1025--1032},
   year={2003}
 }
@@ -566,12 +665,6 @@
   year={2014},
   publisher={Now Publishers, Inc.}
 }
-
-
-
-
-
-
 
 
 @article{knuth84,
