--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -47,12 +47,22 @@
   author={张文旭 and 马磊 and 王晓东},
   year={2017},
   address   = {哈尔滨},
-  publisher={智能系统学报}
+  journal={智能系统学报}
 }
+@article{tsitsiklis1994asynchronous,
+  title={Asynchronous stochastic approximation and Q-learning},
+  author={Tsitsiklis, John N},
+  journal={Machine Learning},
+  volume={16},
+  number={3},
+  pages={185--202},
+  year={1994}
+}
+
 @inproceedings{macek2002reinforcement,
   title={A reinforcement learning approach to obstacle avoidance of mobile robots},
   author={Macek, Kristijan and PetroviC, Ivan and Peric, N},
-  booktitle={Proceedings of 7th International Workshop on Advanced Motion Control},
+  booktitle={Proceedings of the 7th International Workshop on Advanced Motion Control},
   pages={462--466},
   year={2002}
 }
@@ -68,7 +78,7 @@
 @article{guo2015survey,
   title={A survey on semi-Markov decision processes},
   author={GUO, XianPing and HUANG, YongHui},
-  journal={SCIENTIA SINICA Mathematica},
+  journal={Scientia Sinica Mathematica},
   volume={45},
   number={5},
   pages={477--496},
@@ -78,7 +88,7 @@
 @inproceedings{tesauro2006hybrid,
   title={A hybrid reinforcement learning approach to autonomic resource allocation},
   author={Tesauro, Gerald and Jong, Nicholas K and Das, Rajarshi and Bennani, Mohamed N},
-  booktitle={Proceedings of International Conference on Autonomic Computing},
+  booktitle={Proceedings of the 3rd International Conference on Autonomic Computing},
   pages={65--73},
   year={2006}
 }
@@ -153,7 +163,7 @@
 @inproceedings{mnih2016asynchronous,
   title={Asynchronous methods for deep reinforcement learning},
   author={Mnih, Volodymyr and Badia, Adria Puigdomenech and Mirza, Mehdi and Graves, Alex and Lillicrap, Timothy and Harley, Tim and Silver, David and Kavukcuoglu, Koray},
-  booktitle={International Conference on Machine Learning},
+  booktitle={Proceedings of the 33rd International Conference on Machine Learning},
   pages={1928--1937},
   year={2016}
 }
@@ -260,14 +270,14 @@
 @inproceedings{alam2012actionable,
   title={Actionable knowledge mining from improved post processing decision trees},
   author={Alam, M and Alam, SA},
-  booktitle={International Conference on Computing and Control Engineering},
+  booktitle={Proceedings of International Conference on Computing and Control Engineering},
   pages={1--8},
   year={2012}
 }
 @article{coussement2015improving,
   title={Improving direct mail targeting through customer response modeling},
   author={Coussement, Kristof and Harrigan, Paul and Benoit, Dries F},
-  journal={Expert Systems With Applications},
+  journal={Expert Systems with Applications},
   volume={42},
   number={22},
   pages={8403--8412},
@@ -316,14 +326,14 @@
 @inproceedings{pednault2002sequential,
   title={Sequential cost-sensitive decision making with reinforcement learning},
   author={Pednault, Edwin and Abe, Naoki and Zadrozny, Bianca},
-  booktitle={Proceedings of the 8th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  booktitle={Proceedings of the 8th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   pages={259--268},
   year={2002}
 }
 @inproceedings{silver2013concurrent,
   title={Concurrent reinforcement learning from customer interactions},
   author={Silver, David and Newnham, Leonard and Barker, David and Weller, Suzanne and McFall, Jason},
-  booktitle={International Conference on Machine Learning},
+  booktitle={Proceedings of the 30th International Conference on Machine Learning},
   pages={924--932},
   year={2013}
 }
@@ -409,11 +419,11 @@
 @incollection{lange2012batch,
   title={Batch reinforcement learning},
   author={Lange, Sascha and Gabel, Thomas and Riedmiller, Martin},
-  booktitle={Reinforcement learning},
+  booktitle={Reinforcement Learning},
   pages={45--73},
   year={2012},
   publisher={Springer},
-  address={Berlin, Heidelberg}
+  address={Berlin}
 }
 @article{baxter2001infinite,
   title={Infinite-horizon policy-gradient estimation},
@@ -427,20 +437,20 @@
   title={The reinforcement learning toolbox, reinforcement learning for optimal control tasks},
   author={Neumann, Gerhard},
   year={2005},
-  publisher={Citeseer},
-  address={Graz}
+  publisher={Technischen University Graz},
+  address={Diplomarbeit}
 }
 @inproceedings{konda2000actor,
   title={Actor-critic algorithms},
   author={Konda, Vijay R and Tsitsiklis, John N},
-  booktitle={Advances in neural information processing systems},
+  booktitle={Proceedings of the 14th Advances in Neural Information Processing Systems},
   pages={1008--1014},
   year={2000}
 }
 @inproceedings{mnih2013playing,
   title={Playing atari with deep reinforcement learning},
   author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Graves, Alex and Antonoglou, Ioannis and Wierstra, Daan and Riedmiller, Martin},
-  booktitle={Deep Learning Workshop on Advances in neural information processing systems},
+  booktitle={Proceedings of the 27th Advances in Neural Information Processing Systems},
   pages={54--62},
   year={2013}
 }
@@ -457,7 +467,7 @@
 @article{watkins1992q,
   title={Q-learning},
   author={Watkins, Christopher JCH and Dayan, Peter},
-  journal={Machine learning},
+  journal={Machine Learning},
   volume={8},
   number={3-4},
   pages={279--292},
@@ -468,13 +478,13 @@
   title={On-line Q-learning using connectionist systems},
   author={Rummery, Gavin A and Niranjan, Mahesan},
   year={1994},
-  publisher={University of Cambridge, Department of Engineering},
+  publisher={University of Cambridge},
   address={Cambridge}
 }
 @article{samuel1959some,
   title={Some studies in machine learning using the game of checkers},
   author={Samuel, Arthur L},
-  journal={IBM Journal of research and development},
+  journal={IBM Journal of Research and Development},
   volume={3},
   number={3},
   pages={210--229},
@@ -484,7 +494,7 @@
 @article{sutton1988learning,
   title={Learning to predict by the methods of temporal differences},
   author={Sutton, Richard S},
-  journal={Machine learning},
+  journal={Machine Learning},
   volume={3},
   number={1},
   pages={9--44},
@@ -494,7 +504,7 @@
 @article{bradtke1996linear,
   title={Linear least-squares algorithms for temporal difference learning},
   author={Bradtke, Steven J and Barto, Andrew G},
-  journal={Machine learning},
+  journal={Machine Learning},
   volume={22},
   number={1-3},
   pages={33--57},
@@ -504,7 +514,7 @@
 @inproceedings{precup2001off,
   title={Off-policy temporal-difference learning with function approximation},
   author={Precup, Doina and Sutton, Richard S and Dasgupta, Sanjoy},
-  booktitle={Proceeding of the 28th International Conference on Machine Learning},
+  booktitle={Proceeding of the 18th International Conference on Machine Learning},
   pages={417--424},
   year={2001}
 }
@@ -519,7 +529,6 @@
   title={Neuro-dynamic programming: an overview},
   author={Bertsekas, Dimitri P and Tsitsiklis, John N},
   booktitle={Proceedings of the 34th IEEE Conference on Decision and Control },
-  volume={1},
   pages={560--564},
   year={1995}
 }
@@ -536,7 +545,7 @@
 @inproceedings{littman2002predictive,
   title={Predictive representations of state},
   author={Littman, Michael L and Sutton, Richard S},
-  booktitle={Advances in neural information processing systems},
+  booktitle={Proceedings of 16th Advances in Neural Information Processing Systems},
   pages={1555--1561},
   year={2002}
 }
@@ -594,7 +603,7 @@
 @article{kaelbling1998planning,
   title={Planning and acting in partially observable stochastic domains},
   author={Kaelbling, Leslie Pack and Littman, Michael L and Cassandra, Anthony R},
-  journal={Artificial intelligence},
+  journal={Artificial Intelligence},
   volume={101},
   number={1-2},
   pages={99--134},
@@ -604,7 +613,7 @@
 @article{bersini1997simplification,
   title={A simplification of the backpropagation-through-time algorithm for optimal neurocontrol},
   author={Bersini, Hugues and Gorrini, Vittorio},
-  journal={IEEE transactions on neural networks},
+  journal={IEEE Transactions on Neural Networks},
   volume={8},
   number={2},
   pages={437--441},
@@ -614,14 +623,14 @@
 @inproceedings{bakker2002reinforcement,
   title={Reinforcement learning with long short-term memory},
   author={Bakker, Bram},
-  booktitle={Advances in neural information processing systems},
+  booktitle={Proceedings of the 16th Advances in Neural Information Processing Systems},
   pages={1475--1482},
   year={2002}
 }
-@article{hausknecht2015deep,
+@inproceedings{hausknecht2015deep,
   title={Deep recurrent q-learning for partially observable mdps},
   author={Hausknecht, Matthew and Stone, Peter},
-  journal={CoRR, abs/1507.06527},
+  booktitle={AAAI Fall Symposium},
   year={2015}
 }
 @techreport{lin1993reinforcement,
@@ -658,7 +667,7 @@
 @article{deng2014deep,
   title={Deep learning: methods and applications},
   author={Deng, Li and Yu, Dong and others},
-  journal={Foundations and Trends{\textregistered} in Signal Processing},
+  journal={Foundations and Trends in Signal Processing},
   volume={7},
   number={3--4},
   pages={197--387},
