--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -70,7 +70,7 @@
 @inproceedings{boutilier2016budget,
   title={Budget Allocation using Weakly Coupled, Constrained Markov Decision Processes.},
   author={Boutilier, Craig and Lu, Tyler},
-  booktitle={Proceedings of the 32nd Conference on Uncertainty in Artificial Intelligence},
+  booktitle={Proceedings of the 32nd International Conference on Uncertainty in Artificial Intelligence},
   pages={52--61},
   year={2016}
 }
@@ -443,14 +443,14 @@
 @inproceedings{konda2000actor,
   title={Actor-critic algorithms},
   author={Konda, Vijay R and Tsitsiklis, John N},
-  booktitle={Proceedings of the 14th Advances in Neural Information Processing Systems},
+  booktitle={Proceedings of the 14th International Conference on Neural Information Processing Systems},
   pages={1008--1014},
   year={2000}
 }
 @inproceedings{mnih2013playing,
   title={Playing atari with deep reinforcement learning},
   author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Graves, Alex and Antonoglou, Ioannis and Wierstra, Daan and Riedmiller, Martin},
-  booktitle={Proceedings of the 27th Advances in Neural Information Processing Systems},
+  booktitle={Proceedings of the 27th International Conference on Neural Information Processing Systems},
   pages={54--62},
   year={2013}
 }
@@ -545,7 +545,7 @@
 @inproceedings{littman2002predictive,
   title={Predictive representations of state},
   author={Littman, Michael L and Sutton, Richard S},
-  booktitle={Proceedings of 16th Advances in Neural Information Processing Systems},
+  booktitle={Proceedings of 16th International Conference on Neural Information Processing Systems},
   pages={1555--1561},
   year={2002}
 }
@@ -623,7 +623,7 @@
 @inproceedings{bakker2002reinforcement,
   title={Reinforcement learning with long short-term memory},
   author={Bakker, Bram},
-  booktitle={Proceedings of the 16th Advances in Neural Information Processing Systems},
+  booktitle={Proceedings of the 16th International Conference on Neural Information Processing Systems},
   pages={1475--1482},
   year={2002}
 }
